--- a/my-microservices-app/charts/cash-service/values.yaml
+++ b/my-microservices-app/charts/cash-service/values.yaml
@@ -79,3 +79,4 @@ affinity: {}
 config:
   KEYCLOAK_ISSUER_URL: "http://keycloak.prod.local/realms/bank-realm"
   KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+  ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
