--- a/my-microservices-app/charts/fraud-service/values.yaml
+++ b/my-microservices-app/charts/fraud-service/values.yaml
@@ -79,3 +79,4 @@ affinity: {}
 config:
   database_url: "jdbc:postgresql://postgres-postgresql.{{ .Release.Namespace }}.svc.cluster.local:5432/mydb"
   database_username: "myuser"
+  ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
