--- a/my-microservices-app/charts/exchange-generator-service/values.yaml
+++ b/my-microservices-app/charts/exchange-generator-service/values.yaml
@@ -78,3 +78,4 @@ affinity: {}
 
 config:
   KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+  ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
