--- a/my-microservices-app/values.yaml
+++ b/my-microservices-app/values.yaml
@@ -36,6 +36,7 @@ customer-service:
     KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.local/realms/bank-realm"
     DDL_AUTO_MODE: "update"
     KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 fraud-service:
   replicaCount: 1
@@ -57,6 +58,7 @@ fraud-service:
   config:
     database_url: "jdbc:postgresql://{{ .Release.Name }}-fraud-db:5432/frauddb"
     database_username: "fraud_user"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
     # database_password_secret: "{{ .Release.Name }}-fraud-db-postgresql"
     # database_password_secret_key: "postgresql-password"
 
@@ -81,6 +83,7 @@ notification-service:
     database_url: "jdbc:postgresql://{{ .Release.Name }}-notification-db:5432/notificationdb"
     database_username: "notification_user"
     KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
     # database_password_secret: "{{ .Release.Name }}-notification-db-postgresql"
     # database_password_secret_key: "postgresql-password"
 
@@ -107,8 +110,8 @@ exchange-service:
     DDL_AUTO_MODE: "update"
     # database_password_secret: "{{ .Release.Name }}-exchange-db-postgresql"
     # database_password_secret_key: "postgresql-password"
-
     KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 exchange-generator-service:
   replicaCount: 1
@@ -129,6 +132,7 @@ exchange-generator-service:
             pathType: ImplementationSpecific
   config:
     KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 cash-service:
   replicaCount: 1
@@ -150,6 +154,7 @@ cash-service:
   config:
     KEYCLOAK_ISSUER_URL: "http://keycloak.prod.local/realms/bank-realm"
     KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 transfer-service:
   replicaCount: 1
@@ -171,6 +176,7 @@ transfer-service:
   config:
     KEYCLOAK_ISSUER_URL: "http://keycloak.prod.local/realms/bank-realm"
     KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 front-ui-service:
   replicaCount: 1
@@ -192,6 +198,7 @@ front-ui-service:
   config:
     KEYCLOAK_ISSUER_URL: "http://keycloak.{{ .Release.Namespace }}.local/realms/bank-realm"
     KEYCLOAK_SERVER_URL: "http://keycloak.{{ .Release.Namespace }}.local"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 keycloak:
   replicaCount: 1
@@ -240,6 +247,7 @@ apigw-service:
     CUSTOMER_SERVICE_URL: "http://customer-service.{{ .Release.Namespace }}.svc.cluster.local:8081"
     FRONT_UI_SERVICE_URL: "http://front-ui-service.{{ .Release.Namespace }}.svc.cluster.local:8085"
     EXCHANGE_SERVICE_URL: "http://exchange-service.{{ .Release.Namespace }}.svc.cluster.local:8086"
+    ZIPKIN_URL: "http://zipkin.prod.svc.cluster.local:9411/api/v2/spans"
 
 # Configuration for the customer-db (PostgreSQL dependency)
 # Values here are prefixed according to the Bitnami PostgreSQL chart's structure
