#zipkin k8s part (skip container image verification by setting the global parameter)

--- a/my-microservices-app/helm/zipkin/values-zipkin.yaml
+++ b/my-microservices-app/helm/zipkin/values-zipkin.yaml
@@ -10,3 +10,7 @@ image:
   repository: bitnamilegacy/zipkin
   tag: 3.5.1-debian-12-r5
   pullPolicy: IfNotPresent
+
+global:
+  security:
+    allowInsecureImages: true
