--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -59,7 +59,12 @@
             <artifactId>resilience4j-retry</artifactId>
         </dependency>
 
-        <!-- Zipkin Tracing -->
+        <!-- Zipkin and prometheus -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
