--- a/exchange-service/src/main/resources/application.yml
+++ b/exchange-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,prometheus
+        include: health,info,prometheus,metrics
   endpoint:
     health:
       probes:
