--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,7 +105,23 @@ services:
     ports:
       - "9411:9411"
     networks:
-      - spring
+      - monitoring_network
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    networks:
+      - monitoring_network
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - monitoring_network
+    depends_on:
+      - prometheus
   kafka:
     image: apache/kafka:4.0.0
     container_name: bank-kafka
@@ -172,9 +188,9 @@ services:
 networks:
   postgres:
     driver: bridge
-  spring:
-    driver: bridge
   kafka-network:
+    driver: bridge
+  monitoring_network:
     driver: bridge
 
 volumes:
