--- a/transfer-service/pom.xml
+++ b/transfer-service/pom.xml
@@ -91,6 +91,17 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Logback Kafka Appender for ELK logging -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+            <version>0.2.0-RC2</version>
+        </dependency>
     </dependencies>
 
 </project> 
